--- a/templateLogin/composer.json
+++ b/templateLogin/composer.json
@@ -9,8 +9,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
-        "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "tymon/jwt-auth": "^1.0",
         "yajra/laravel-oci8": "^8.6"
     },
     "require-dev": {
